# gpgpu

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.am  benchmark.sh  configure.ac  eval.jl  issues.md
.github/workflows/: c-cpp.yml
cuda/: CMakeLists.txt  Makefile  Readme.md  benchmark.sh  issues.md  saxpy.cu  saxpychipcl  saxpychipl0
hip/: CMakeLists.txt  Makefile  MatrixTranspose.cpp  Readme.md  issues.md
julia/: Manifest.toml  Readme.md  issues.md
julia/src/: example1.jl
juliaoneapi/: Manifest.toml  Readme.md
juliaoneapi/scripts/: saxpy.sh
juliaoneapi/src/: saxpy.jl
level0/: Makefile  Readme.md  issues.md  levelzero.cpp
opencl/: CMakeLists.txt  Makefile  Readme.md  main.c  saxpy.cpp
openmp/: CMakeLists.txt  Makefile  Makefile.am  Readme.md  configure.ac  example1.c  issues.md  saxpy.cpp
sycl/: Makefile  Readme.md  example1.cpp  example2.cpp  issues.md  main.cpp  saxpy.cpp  saxpy.sh
